frontend/src/Employee/pages/Employee.css
/* Ordering.css */

.employee {
    display: flex;
    flex-direction: column;
    height: 100%;
    font-size: 24px;
}

button {
    background-color: #005bbd;
    color: #fff;
    border: none;
    border-radius: 5px;
    padding: 8px 16px;
    cursor: pointer;
    font-size: 24px;
}

button:hover {
    background-color: rgb(0, 69, 142);
}

.top-bar button {
    background-color: #005bbd;
}
.top-bar button:hover {
    background-color: rgb(0, 69, 142);
}

.bottom-nav button {
    font-size: 24px;
    background-color: #005bbd;
}
.bottom-nav button:hover {
    background-color: rgb(0, 69, 142);
}

.large-text .top-bar button,
.large-text .bottom-nav button {
    font-size: 40px;
}

.top-bar {
    background-color: #333;
    color: #fff;
    padding: 10px 20px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.user-info span {
    margin-right: 10px;
}

.middle-content {
    flex: 1;
    display: flex;
    justify-content: center;
    align-items: center;
    font-weight: bold;
}

.layout {
    width: 100%;
    height: 768px;
  
    display: grid;
    grid-template-columns: 3fr 2fr; 
    grid-template-areas: "leftSide rightSide";
    gap: 8px;
}
.leftSide { 
    grid-area: leftSide; 
    background-color: rgb(227, 227, 227);
    margin: 5px;
    padding: 20px;
    display: flex;
    flex-direction: column;
    align-items: center;
}
.rightSide { 
    grid-area: rightSide; 
    background-color: rgb(227, 227, 227);
    margin-right: 5px;
    padding: 20px;
    font-size: 20px;
}

.large-text .categoryName {
    font-size: 40px;
}

.items {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-gap: 10px;
    justify-content: space-around;
    width: 100%;
}

.items button {
    padding: 10px;
    margin: 10px;
    width: 95%;
    height: 100%;
}

.large-text .items button{
    font-size: 40px;
}

.bottom-nav {
    background-color: #f8f9fa;
    display: flex;
    justify-content: space-evenly;
    align-items: stretch;
    padding: 20px 0;
}

.bottom-nav button {
    flex-grow: 1;
    min-height: 90px;
    border: none;
    border-radius: 5px;
    padding: 10px 20px;
    margin: 0 10px;
    cursor: pointer;
}

